# Semantic-Logic-Bridge

./: README.md  folnlp  pyproject.toml
src/folnlp/: __init__.py  __main__.py  cli.py  fol_to_nl.py  nl_parser.py  tokenizer.py  translator.py  vocabulary.py  web.py
src/folnlp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cli.py  test_translator.py
